--- a/Authenticator/Localized-strings/Authenticator/en.xcloc/Localized Contents/en.xliff
+++ b/Authenticator/Localized-strings/Authenticator/en.xcloc/Localized Contents/en.xliff
@@ -1,215 +1,262 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 http://docs.oasis-open.org/xliff/v1.2/os/xliff-core-1.2-strict.xsd">
-  <file original="Authenticator/en.lproj/InfoPlist.strings" datatype="plaintext" source-language="en" target-language="hy-AM">
+  <file original="Authenticator/en.lproj/InfoPlist.strings" source-language="en" target-language="en" datatype="plaintext">
     <header>
       <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="11.7" build-num="11E801a"/>
     </header>
     <body>
       <trans-unit id="CFBundleDisplayName" xml:space="preserve">
         <source>SOTP</source>
+        <target>SOTP</target>
         <note>Bundle display name</note>
       </trans-unit>
       <trans-unit id="CFBundleName" xml:space="preserve">
         <source>SOTP</source>
+        <target>SOTP</target>
         <note>Bundle name</note>
       </trans-unit>
       <trans-unit id="NSCameraUsageDescription" xml:space="preserve">
         <source>$(Authenticator) photo use</source>
+        <target>$(Authenticator) photo use</target>
         <note>Privacy - Camera Usage Description</note>
       </trans-unit>
       <trans-unit id="SOTP file" xml:space="preserve">
         <source>SOTP file</source>
+        <target>SOTP file</target>
         <note/>
       </trans-unit>
     </body>
   </file>
-  <file original="Authenticator/en.lproj/Localizable.strings" datatype="plaintext" source-language="en" target-language="hy-AM">
+  <file original="Authenticator/en.lproj/Localizable.strings" source-language="en" target-language="en" datatype="plaintext">
     <header>
       <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="11.7" build-num="11E801a"/>
     </header>
     <body>
       <trans-unit id="Account" xml:space="preserve">
         <source>Account</source>
+        <target>Account</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Add account" xml:space="preserve">
         <source>Add account</source>
+        <target>Add account</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Authenticator" xml:space="preserve">
         <source>Authenticator</source>
+        <target>Authenticator</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Buy SOTP Authenticator and support this project" xml:space="preserve">
         <source>Buy SOTP Authenticator and support this project</source>
+        <target>Buy SOTP Authenticator and support this project</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Bye" xml:space="preserve">
         <source>Bye</source>
+        <target>Bye</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Cancel" xml:space="preserve">
         <source>Cancel</source>
+        <target>Cancel</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Capture error (error.localizedDescription)" xml:space="preserve">
         <source>Capture error (error.localizedDescription)</source>
+        <target>Capture error (error.localizedDescription)</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Confirm password" xml:space="preserve">
         <source>Confirm password</source>
+        <target>Confirm password</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Confirm the password!" xml:space="preserve">
         <source>Confirm the password!</source>
+        <target>Confirm the password!</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Core data delete error" xml:space="preserve">
         <source>Core data delete error</source>
+        <target>Core data delete error</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Core data load error" xml:space="preserve">
         <source>Core data load error</source>
+        <target>Core data load error</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Core data save error" xml:space="preserve">
         <source>Core data save error</source>
+        <target>Core data save error</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Create" xml:space="preserve">
         <source>Create</source>
+        <target>Create</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Data loaded" xml:space="preserve">
         <source>Data loaded</source>
+        <target>Data loaded</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Enter password" xml:space="preserve">
         <source>Enter password</source>
+        <target>Enter password</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Error to upload file" xml:space="preserve">
         <source>Error to upload file</source>
+        <target>Error to upload file</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Json serialization error" xml:space="preserve">
         <source>Json serialization error</source>
+        <target>Json serialization error</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Load from backup" xml:space="preserve">
         <source>Load from backup</source>
+        <target>Load from backup</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Ok" xml:space="preserve">
         <source>Ok</source>
+        <target>Ok</target>
         <note>Default action</note>
       </trans-unit>
       <trans-unit id="PREMIUM" xml:space="preserve">
         <source>PREMIUM</source>
+        <target>PREMIUM</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Password" xml:space="preserve">
         <source>Password</source>
+        <target>Password</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Password can't be empty" xml:space="preserve">
         <source>Password can't be empty</source>
+        <target>Password can't be empty</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Passwords do not match" xml:space="preserve">
         <source>Passwords do not match</source>
+        <target>Passwords do not match</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Please enter correct account" xml:space="preserve">
         <source>Please enter correct account</source>
+        <target>Please enter correct account</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Refresh in " xml:space="preserve">
         <source>Refresh in </source>
+        <target>Refresh in </target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Refresh in 30 s." xml:space="preserve">
         <source>Refresh in 30 s.</source>
+        <target>Refresh in 30 s.</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Restore" xml:space="preserve">
         <source>Restore</source>
+        <target>Restore</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="SOTP" xml:space="preserve">
         <source>SOTP</source>
+        <target>SOTP</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Scan QR Code" xml:space="preserve">
         <source>Scan QR Code</source>
+        <target>Scan QR Code</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Secret key" xml:space="preserve">
         <source>Secret key</source>
+        <target>Secret key</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Settings" xml:space="preserve">
         <source>Settings</source>
+        <target>Settings</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Setup one time password" xml:space="preserve">
         <source>Setup one time password</source>
+        <target>Setup one time password</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Time-based" xml:space="preserve">
         <source>Time-based</source>
+        <target>Time-based</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Welcome to" xml:space="preserve">
         <source>Welcome to</source>
+        <target>Welcome to</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Wrong account" xml:space="preserve">
         <source>Wrong account</source>
+        <target>Wrong account</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Wrong password" xml:space="preserve">
         <source>Wrong password</source>
+        <target>Wrong password</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="or" xml:space="preserve">
         <source>or</source>
+        <target>or</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="s." xml:space="preserve">
         <source>s.</source>
+        <target>s.</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Введенные пароли не совпадают" xml:space="preserve">
         <source>Введенные пароли не совпадают</source>
+        <target>Введенные пароли не совпадают</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Введие подтверждение пароля!" xml:space="preserve">
         <source>Введие подтверждение пароля!</source>
+        <target>Введие подтверждение пароля!</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Пароль не может быть пустым" xml:space="preserve">
         <source>Пароль не может быть пустым</source>
+        <target>Пароль не может быть пустым</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
     </body>
   </file>
-  <file original="SOTPWatch Extension/en.lproj/InfoPlist.strings" datatype="plaintext" source-language="en" target-language="hy-AM">
+  <file original="SOTPWatch Extension/en.lproj/InfoPlist.strings" source-language="en" target-language="en" datatype="plaintext">
     <header>
       <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="11.7" build-num="11E801a"/>
     </header>
     <body>
       <trans-unit id="CFBundleDisplayName" xml:space="preserve">
         <source>SOTPWatch Extension</source>
+        <target>SOTPWatch Extension</target>
         <note>Bundle display name</note>
       </trans-unit>
       <trans-unit id="CFBundleName" xml:space="preserve">
         <source>SOTPWatch Extension</source>
+        <target>SOTPWatch Extension</target>
         <note>Bundle name</note>
       </trans-unit>
     </body>
   </file>
-  <file original="SOTPWatch/Base.lproj/Interface.storyboard" source-language="en" target-language="hy-AM" datatype="plaintext">
+  <file original="SOTPWatch/Base.lproj/Interface.storyboard" source-language="en" target-language="en" datatype="plaintext">
     <header>
       <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="11.7" build-num="11E801a"/>
     </header>
