--- a/Authenticator/Localized-strings/Authenticator/ru.xcloc/Localized Contents/ru.xliff
+++ b/Authenticator/Localized-strings/Authenticator/ru.xcloc/Localized Contents/ru.xliff
@@ -2,7 +2,7 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 http://docs.oasis-open.org/xliff/v1.2/os/xliff-core-1.2-strict.xsd">
   <file original="Authenticator/en.lproj/InfoPlist.strings" datatype="plaintext" source-language="en" target-language="ru">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="11.7" build-num="11E801a"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="12.2" build-num="12B45b"/>
     </header>
     <body>
       <trans-unit id="CFBundleDisplayName" xml:space="preserve">
@@ -14,7 +14,7 @@
         <note>Bundle name</note>
       </trans-unit>
       <trans-unit id="NSCameraUsageDescription" xml:space="preserve">
-        <source>$(Authenticator) photo use</source>
+        <source> photo use</source>
         <note>Privacy - Camera Usage Description</note>
       </trans-unit>
       <trans-unit id="SOTP file" xml:space="preserve">
@@ -23,11 +23,16 @@
       </trans-unit>
     </body>
   </file>
-  <file original="Authenticator/en.lproj/Localizable.strings" datatype="plaintext" source-language="en" target-language="ru">
+  <file original="Authenticator/en.lproj/Localizable.strings" source-language="en" target-language="ru" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="11.7" build-num="11E801a"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="12.2" build-num="12B45b"/>
     </header>
     <body>
+      <trans-unit id="About SOTP" xml:space="preserve">
+        <source>About SOTP</source>
+        <target>О программе</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="Account" xml:space="preserve">
         <source>Account</source>
         <target>Логин</target>
@@ -41,14 +46,6 @@
       <trans-unit id="Authenticator" xml:space="preserve">
         <source>Authenticator</source>
         <target>Аутентификатор</target>
-        <note>No comment provided by engineer.</note>
-      </trans-unit>
-      <trans-unit id="Buy SOTP Authenticator and support this project" xml:space="preserve">
-        <source>Buy SOTP Authenticator and support this project</source>
-        <note>No comment provided by engineer.</note>
-      </trans-unit>
-      <trans-unit id="Bye" xml:space="preserve">
-        <source>Bye</source>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Cancel" xml:space="preserve">
@@ -70,6 +67,11 @@
         <target>Поддтвердите пароль</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
+      <trans-unit id="Copied" xml:space="preserve">
+        <source>Copied</source>
+        <target>Скопированно</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="Core data delete error" xml:space="preserve">
         <source>Core data delete error</source>
         <note>No comment provided by engineer.</note>
@@ -87,6 +89,11 @@
         <target>Создать</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
+      <trans-unit id="Create backup" xml:space="preserve">
+        <source>Create backup</source>
+        <target>Создать резервную копию</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="Data loaded" xml:space="preserve">
         <source>Data loaded</source>
         <note>No comment provided by engineer.</note>
@@ -98,22 +105,30 @@
       </trans-unit>
       <trans-unit id="Error to upload file" xml:space="preserve">
         <source>Error to upload file</source>
+        <target>Ошибка загрузки файла</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Json serialization error" xml:space="preserve">
         <source>Json serialization error</source>
         <note>No comment provided by engineer.</note>
       </trans-unit>
+      <trans-unit id="Load from Backup" xml:space="preserve">
+        <source>Load from Backup</source>
+        <target>Загрузить из резервной копии</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="Load from backup" xml:space="preserve">
         <source>Load from backup</source>
+        <target>Загрузить из резервной копии</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Ok" xml:space="preserve">
         <source>Ok</source>
         <note>Default action</note>
       </trans-unit>
-      <trans-unit id="PREMIUM" xml:space="preserve">
-        <source>PREMIUM</source>
+      <trans-unit id="Open GitHub repo" xml:space="preserve">
+        <source>Open GitHub repo</source>
+        <target>Открыть GitHub</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Password" xml:space="preserve">
@@ -131,6 +146,11 @@
         <target>Пароли не совпадают</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
+      <trans-unit id="Please consider to support this open source project" xml:space="preserve">
+        <source>Please consider to support this open source project</source>
+        <target>Если Вам нравиться приложение Вы можете поддержать проект</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="Please enter correct account" xml:space="preserve">
         <source>Please enter correct account</source>
         <target>Введите правильный аккаунт</target>
@@ -138,18 +158,21 @@
       </trans-unit>
       <trans-unit id="Refresh in " xml:space="preserve">
         <source>Refresh in </source>
+        <target>Обновится через </target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Refresh in 30 s." xml:space="preserve">
         <source>Refresh in 30 s.</source>
-        <note>No comment provided by engineer.</note>
-      </trans-unit>
-      <trans-unit id="Restore" xml:space="preserve">
-        <source>Restore</source>
+        <target>Обновится через 30 сек.</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="SOTP" xml:space="preserve">
         <source>SOTP</source>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="SOTP is an open source app. It does not collect any personal information." xml:space="preserve">
+        <source>SOTP is an open source app. It does not collect any personal information.</source>
+        <target>SOTP - это приложение с открытым исходным кодом. Мы не собираем никакие пользовательские данные.</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Scan QR Code" xml:space="preserve">
@@ -170,6 +193,21 @@
       <trans-unit id="Setup one time password" xml:space="preserve">
         <source>Setup one time password</source>
         <target>Настройте одноразовый пароль</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="Support" xml:space="preserve">
+        <source>Support</source>
+        <target>Поддержать</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="Support this project" xml:space="preserve">
+        <source>Support this project</source>
+        <target>Помочь проекту</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="Thank you for your support!" xml:space="preserve">
+        <source>Thank you for your support!</source>
+        <target>Спасибо за Вашу поддержку!</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Time-based" xml:space="preserve">
@@ -199,25 +237,14 @@
       </trans-unit>
       <trans-unit id="s." xml:space="preserve">
         <source>s.</source>
-        <note>No comment provided by engineer.</note>
-      </trans-unit>
-      <trans-unit id="Введенные пароли не совпадают" xml:space="preserve">
-        <source>Введенные пароли не совпадают</source>
-        <note>No comment provided by engineer.</note>
-      </trans-unit>
-      <trans-unit id="Введите подтверждение пароля!" xml:space="preserve">
-        <source>Введие подтверждение пароля!</source>
-        <note>No comment provided by engineer.</note>
-      </trans-unit>
-      <trans-unit id="Пароль не может быть пустым" xml:space="preserve">
-        <source>Пароль не может быть пустым</source>
+        <target>сек.</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
     </body>
   </file>
   <file original="SOTPWatch Extension/en.lproj/InfoPlist.strings" datatype="plaintext" source-language="en" target-language="ru">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="11.7" build-num="11E801a"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="12.2" build-num="12B45b"/>
     </header>
     <body>
       <trans-unit id="CFBundleDisplayName" xml:space="preserve">
@@ -230,30 +257,37 @@
       </trans-unit>
     </body>
   </file>
-  <file original="SOTPWatch/Base.lproj/Interface.storyboard" source-language="en" target-language="ru" datatype="plaintext">
+  <file original="SOTPWatch Extension/en.lproj/Localizable.strings" source-language="en" target-language="ru" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="11.7" build-num="11E801a"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="12.2" build-num="12B45b"/>
     </header>
     <body>
-      <trans-unit id="Fqf-yn-Gjs.text" xml:space="preserve">
-        <source>test@mail</source>
-        <target>test@mail</target>
-        <note>Class = "WKInterfaceLabel"; text = "test@mail"; ObjectID = "Fqf-yn-Gjs";</note>
+      <trans-unit id="Core data delete error" xml:space="preserve">
+        <source>Core data delete error</source>
+        <note>No comment provided by engineer.</note>
       </trans-unit>
-      <trans-unit id="aHZ-6s-9pE.text" xml:space="preserve">
-        <source>Oбновится через 30 с</source>
-        <target>Oбновится через 30 с</target>
-        <note>Class = "WKInterfaceLabel"; text = "Oбновится через 30 с"; ObjectID = "aHZ-6s-9pE";</note>
+      <trans-unit id="Core data load error" xml:space="preserve">
+        <source>Core data load error</source>
+        <note>No comment provided by engineer.</note>
       </trans-unit>
-      <trans-unit id="fus-sy-CsC.text" xml:space="preserve">
-        <source>Google</source>
-        <target>Google</target>
-        <note>Class = "WKInterfaceLabel"; text = "Google"; ObjectID = "fus-sy-CsC";</note>
+      <trans-unit id="Core data save error" xml:space="preserve">
+        <source>Core data save error</source>
+        <note>No comment provided by engineer.</note>
       </trans-unit>
-      <trans-unit id="hf9-q1-ODr.text" xml:space="preserve">
-        <source>123456</source>
-        <target>123456</target>
-        <note>Class = "WKInterfaceLabel"; text = "123456"; ObjectID = "hf9-q1-ODr";</note>
+      <trans-unit id="Refresh in " xml:space="preserve">
+        <source>Refresh in </source>
+        <target>Обновится через</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="Refresh in s." xml:space="preserve">
+        <source>Refresh in s.</source>
+        <target>Обновится через</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="s." xml:space="preserve">
+        <source>s.</source>
+        <target>сек.</target>
+        <note>No comment provided by engineer.</note>
       </trans-unit>
     </body>
   </file>
